5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4138/executions/1675_1950.log
== SUBMITION (2019-05-02 12:12:58) 
-- CODE:
v = float(input("insira a velocidade do vento:"))
T = float(input("insira a temperatura:"))

A = 13.12 + (0.6215 * T) −(11.37 * (v ** 0.16)) +(0.3965 * T * (v ** 0.16))

if(v > 4.8):
	if(T >= -50 and <=10):
	print(round(A,4))
	elif(Tar < -50 or Tar > 10):
	print("Temperatura invalida")
else:
	print("Velocidade invalida")
	
-- EXECUTION TIME:
0.184551
-- ERROR:
  File "/home/codebench/codes/1675/1950/main.py", line 4
    A = 13.12 + (0.6215 * T) \u2212(11.37 * (v ** 0.16)) +(0.3965 * T * (v ** 0.16))
                             ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 12:12:59) 
-- CODE:
v = float(input("insira a velocidade do vento:"))
T = float(input("insira a temperatura:"))

A = 13.12 + (0.6215 * T) −(11.37 * (v ** 0.16)) +(0.3965 * T * (v ** 0.16))

if(v > 4.8):
	if(T >= -50 and <=10):
	print(round(A,4))
	elif(Tar < -50 or Tar > 10):
	print("Temperatura invalida")
else:
	print("Velocidade invalida")
	
-- ERROR:
File "XXXX", line 4
    A = 13.12 + (0.6215 * T) −(11.37 * (v ** 0.16)) +(0.3965 * T * (v ** 0.16))
                             ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 12:14:21) 
-- CODE:
v = float(input("insira a velocidade do vento:"))
T = float(input("insira a temperatura:"))

A = 13.12 + (0.6215 * T) − (11.37 * (v ** 0.16)) +(0.3965 * T * (v ** 0.16))

if(v > 4.8):
	if(T >= -50 and <=10):
	print(round(A,4))
	elif(T < -50 or T > 10):
	print("Temperatura invalida")
else:
	print("Velocidade invalida")
	
-- ERROR:
File "XXXX", line 4
    A = 13.12 + (0.6215 * T) − (11.37 * (v ** 0.16)) +(0.3965 * T * (v ** 0.16))
                             ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 12:14:49) 
-- CODE:
v = float(input("insira a velocidade do vento:"))
T = float(input("insira a temperatura:"))

A = 13.12 + (0.6215 * T) (11.37 * (v ** 0.16)) +(0.3965 * T * (v ** 0.16))

if(v > 4.8):
	if(T >= -50 and <=10):
	print(round(A,4))
	elif(T < -50 or T > 10):
	print("Temperatura invalida")
else:
	print("Velocidade invalida")
	
-- ERROR:
File "XXXX", line 7
    if(T >= -50 and <=10):
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 12:15:02) 
-- CODE:
v = float(input("insira a velocidade do vento:"))
T = float(input("insira a temperatura:"))

A = 13.12 + (0.6215 * T) (11.37 * (v ** 0.16)) +(0.3965 * T * (v ** 0.16))

if(v > 4.8):
	if(T >= -50 and <= 10):
	print(round(A,4))
	elif(T < -50 or T > 10):
	print("Temperatura invalida")
else:
	print("Velocidade invalida")
	
-- ERROR:
File "XXXX", line 7
    if(T >= -50 and <= 10):
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 12:16:07) 
-- CODE:
v = float(input("insira a velocidade do vento:"))
T = float(input("insira a temperatura:"))

A = 13.12 + (0.6215 * T) -(11.37 * (v ** 0.16)) +(0.3965 * T * (v ** 0.16))

if(v > 4.8):
	if(T >= -50 and <= 10):
	print(round(A,4))
	elif(T < -50 or T > 10):
	print("Temperatura invalida")
else:
	print("Velocidade invalida")
	
-- EXECUTION TIME:
0.243881
-- ERROR:
  File "/home/codebench/codes/1675/1950/main.py", line 7
    if(T >= -50 and <= 10):
                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 12:16:08) 
-- CODE:
v = float(input("insira a velocidade do vento:"))
T = float(input("insira a temperatura:"))

A = 13.12 + (0.6215 * T) -(11.37 * (v ** 0.16)) +(0.3965 * T * (v ** 0.16))

if(v > 4.8):
	if(T >= -50 and <= 10):
	print(round(A,4))
	elif(T < -50 or T > 10):
	print("Temperatura invalida")
else:
	print("Velocidade invalida")
	
-- ERROR:
File "XXXX", line 7
    if(T >= -50 and <= 10):
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 12:16:18) 
-- CODE:
v = float(input("insira a velocidade do vento:"))
T = float(input("insira a temperatura:"))

A = 13.12 + (0.6215 * T) -(11.37 * (v ** 0.16)) +(0.3965 * T * (v ** 0.16))

if(v > 4.8):
	if(T >= -50 and =< 10):
	print(round(A,4))
	elif(T < -50 or T > 10):
	print("Temperatura invalida")
else:
	print("Velocidade invalida")
	
-- ERROR:
File "XXXX", line 7
    if(T >= -50 and =< 10):
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 12:16:37) 
-- CODE:
v = float(input("insira a velocidade do vento:"))
T = float(input("insira a temperatura:"))

A = 13.12 + (0.6215 * T) -(11.37 * (v ** 0.16)) +(0.3965 * T * (v ** 0.16))

if(v > 4.8):
	if(T >= -50 and  T <= 10):
	print(round(A,4))
	elif(T < -50 or T > 10):
	print("Temperatura invalida")
else:
	print("Velocidade invalida")
	
-- ERROR:
File "XXXX", line 8
    print(round(A,4))
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 12:17:04) 
-- CODE:
v = float(input("insira a velocidade do vento:"))
T = float(input("insira a temperatura:"))

A = 13.12 + (0.6215 * T) -(11.37 * (v ** 0.16)) +(0.3965 * T * (v ** 0.16))

if(v > 4.8):
	if(T >= -50 and  T <= 10):
		print(round(A,4))
	elif(T < -50 or T > 10):
		print("Temperatura invalida")
else:
	print("Velocidade invalida")
	
-- OUTPUT:
6.1143
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 12:17:06) 
-- CODE:
v = float(input("insira a velocidade do vento:"))
T = float(input("insira a temperatura:"))

A = 13.12 + (0.6215 * T) -(11.37 * (v ** 0.16)) +(0.3965 * T * (v ** 0.16))

if(v > 4.8):
	if(T >= -50 and  T <= 10):
		print(round(A,4))
	elif(T < -50 or T > 10):
		print("Temperatura invalida")
else:
	print("Velocidade invalida")
	
-- EXECUTION TIME:
0.148618
-- TEST CASE 1:
---- input:
20
9
---- correct output:
Temperatura invalida
---- user output:
6.1143
-- TEST CASE 2:
---- input:
-5
4
---- correct output:
Velocidade invalida
---- user output:
Velocidade invalida
-- TEST CASE 3:
---- input:
-5
50
---- correct output:
-14.9563
---- user output:
Velocidade invalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 12:17:47) 
-- CODE:
v = float(input("insira a velocidade do vento:"))
T = float(input("insira a temperatura:"))

A = 13.12 + (0.6215 * T) -(11.37 * (v ** 0.16)) +(0.3965 * T * (v ** 0.16))

if(v > 4.8):
	if(T >= -50 and  T <= 10):
		print(round(A,4))
	elif(T < -50 or T > 10):
		print("Temperatura invalida")
else:
	print("Velocidade invalida")
	
-- EXECUTION TIME:
0.227515
-- TEST CASE 1:
---- input:
20
9
---- correct output:
Temperatura invalida
---- user output:
6.1143
-- TEST CASE 2:
---- input:
-5
4
---- correct output:
Velocidade invalida
---- user output:
Velocidade invalida
-- TEST CASE 3:
---- input:
-5
50
---- correct output:
-14.9563
---- user output:
Velocidade invalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 12:17:48) 
-- CODE:
v = float(input("insira a velocidade do vento:"))
T = float(input("insira a temperatura:"))

A = 13.12 + (0.6215 * T) -(11.37 * (v ** 0.16)) +(0.3965 * T * (v ** 0.16))

if(v > 4.8):
	if(T >= -50 and  T <= 10):
		print(round(A,4))
	elif(T < -50 or T > 10):
		print("Temperatura invalida")
else:
	print("Velocidade invalida")
	
-- EXECUTION TIME:
0.264957
-- TEST CASE 1:
---- input:
20
9
---- correct output:
Temperatura invalida
---- user output:
6.1143
-- TEST CASE 2:
---- input:
-5
4
---- correct output:
Velocidade invalida
---- user output:
6.1143
-- TEST CASE 3:
---- input:
-5
50
---- correct output:
-14.9563
---- user output:
Velocidade invalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 12:17:49) 
-- CODE:
v = float(input("insira a velocidade do vento:"))
T = float(input("insira a temperatura:"))

A = 13.12 + (0.6215 * T) -(11.37 * (v ** 0.16)) +(0.3965 * T * (v ** 0.16))

if(v > 4.8):
	if(T >= -50 and  T <= 10):
		print(round(A,4))
	elif(T < -50 or T > 10):
		print("Temperatura invalida")
else:
	print("Velocidade invalida")
	
-- EXECUTION TIME:
0.130346
-- TEST CASE 1:
---- input:
20
9
---- correct output:
Temperatura invalida
---- user output:
6.1143
-- TEST CASE 2:
---- input:
-5
4
---- correct output:
Velocidade invalida
---- user output:
6.1143
-- TEST CASE 3:
---- input:
-5
50
---- correct output:
-14.9563
---- user output:
6.1143
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 12:17:49) 
-- CODE:
v = float(input("insira a velocidade do vento:"))
T = float(input("insira a temperatura:"))

A = 13.12 + (0.6215 * T) -(11.37 * (v ** 0.16)) +(0.3965 * T * (v ** 0.16))

if(v > 4.8):
	if(T >= -50 and  T <= 10):
		print(round(A,4))
	elif(T < -50 or T > 10):
		print("Temperatura invalida")
else:
	print("Velocidade invalida")
	
-- EXECUTION TIME:
0.472712
-- TEST CASE 1:
---- input:
20
9
---- correct output:
Temperatura invalida
---- user output:
6.1143
-- TEST CASE 2:
---- input:
-5
4
---- correct output:
Velocidade invalida
---- user output:
Velocidade invalida
-- TEST CASE 3:
---- input:
-5
50
---- correct output:
-14.9563
---- user output:
Velocidade invalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 12:17:49) 
-- CODE:
v = float(input("insira a velocidade do vento:"))
T = float(input("insira a temperatura:"))

A = 13.12 + (0.6215 * T) -(11.37 * (v ** 0.16)) +(0.3965 * T * (v ** 0.16))

if(v > 4.8):
	if(T >= -50 and  T <= 10):
		print(round(A,4))
	elif(T < -50 or T > 10):
		print("Temperatura invalida")
else:
	print("Velocidade invalida")
	
-- EXECUTION TIME:
0.39
-- TEST CASE 1:
---- input:
20
9
---- correct output:
Temperatura invalida
---- user output:
6.1143
-- TEST CASE 2:
---- input:
-5
4
---- correct output:
Velocidade invalida
---- user output:

-- TEST CASE 3:
---- input:
-5
50
---- correct output:
-14.9563
---- user output:
Velocidade invalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 12:17:49) 
-- CODE:
v = float(input("insira a velocidade do vento:"))
T = float(input("insira a temperatura:"))

A = 13.12 + (0.6215 * T) -(11.37 * (v ** 0.16)) +(0.3965 * T * (v ** 0.16))

if(v > 4.8):
	if(T >= -50 and  T <= 10):
		print(round(A,4))
	elif(T < -50 or T > 10):
		print("Temperatura invalida")
else:
	print("Velocidade invalida")
	
-- EXECUTION TIME:
0.301135
-- TEST CASE 1:
---- input:
20
9
---- correct output:
Temperatura invalida
---- user output:
Velocidade invalida
-- TEST CASE 2:
---- input:
-5
4
---- correct output:
Velocidade invalida
---- user output:
Velocidade invalida
-- TEST CASE 3:
---- input:
-5
50
---- correct output:
-14.9563
---- user output:
Velocidade invalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 12:18:15) 
-- CODE:
v = float(input("insira a velocidade do vento:"))
T = float(input("insira a temperatura:"))

A = 13.12 + (0.6215 * T) -(11.37 * (v ** 0.16)) +(0.3965 * T * (v ** 0.16))

if(v > 4.8):
	if(T > -50 and  T < 10):
		print(round(A,4))
	elif(T < -50 or T > 10):
		print("Temperatura invalida")
else:
	print("Velocidade invalida")
	
-- EXECUTION TIME:
0.113066
-- TEST CASE 1:
---- input:
20
9
---- correct output:
Temperatura invalida
---- user output:
6.1143
-- TEST CASE 2:
---- input:
-5
4
---- correct output:
Velocidade invalida
---- user output:
Velocidade invalida
-- TEST CASE 3:
---- input:
-5
50
---- correct output:
-14.9563
---- user output:
Velocidade invalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 12:18:17) 
-- CODE:
v = float(input("insira a velocidade do vento:"))
T = float(input("insira a temperatura:"))

A = 13.12 + (0.6215 * T) -(11.37 * (v ** 0.16)) +(0.3965 * T * (v ** 0.16))

if(v > 4.8):
	if(T > -50 and  T < 10):
		print(round(A,4))
	elif(T < -50 or T > 10):
		print("Temperatura invalida")
else:
	print("Velocidade invalida")
	
-- OUTPUT:
6.1143
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 12:18:34) 
-- CODE:
v = float(input("insira a velocidade do vento:"))
T = float(input("insira a temperatura:"))

A = 13.12 + (0.6215 * T) -(11.37 * (v ** 0.16)) +(0.3965 * T * (v ** 0.16))

if(v > 4.8):
	if(T >= -50 and  T <= 10):
		print(round(A,4))
	elif(T < -50 or T > 10):
		print("Temperatura invalida")
else:
	print("Velocidade invalida")
	
-- OUTPUT:
6.1143
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 12:19:21) 
-- CODE:
T = float(input("insira a temperatura:"))
v = float(input("insira a velocidade do vento:"))

A = 13.12 + (0.6215 * T) -(11.37 * (v ** 0.16)) +(0.3965 * T * (v ** 0.16))

if(v > 4.8):
	if(T >= -50 and  T <= 10):
		print(round(A,4))
	elif(T < -50 or T > 10):
		print("Temperatura invalida")
else:
	print("Velocidade invalida")
	
-- OUTPUT:
Temperatura invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 12:19:30) 
-- CODE:
T = float(input("insira a temperatura:"))
v = float(input("insira a velocidade do vento:"))

A = 13.12 + (0.6215 * T) -(11.37 * (v ** 0.16)) +(0.3965 * T * (v ** 0.16))

if(v > 4.8):
	if(T >= -50 and  T <= 10):
		print(round(A,4))
	elif(T < -50 or T > 10):
		print("Temperatura invalida")
else:
	print("Velocidade invalida")
	
-- EXECUTION TIME:
0.14196
-- TEST CASE 1:
---- input:
20
9
---- correct output:
Temperatura invalida
---- user output:
Temperatura invalida
-- TEST CASE 2:
---- input:
-5
4
---- correct output:
Velocidade invalida
---- user output:
Velocidade invalida
-- TEST CASE 3:
---- input:
-5
50
---- correct output:
-14.9563
---- user output:
-14.9563
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
